Mahout Change Log

Release 1.0 - unreleased

  MAHOUT-1520: Fix links in Mahout website documentation (Saleem Ansari via smarthi)

  MAHOUT-1523: Remove @author tags in sparkbindings (ssc)

  MAHOUT-1510: Goodbye MapReduce (ssc)

  MAHOUT-1519: Remove StandardThetaTrainer (Andrew Palumbo via ssc)

  MAHOUT-1496: Create a website describing the distributed ALS recommender (Jian Wang via ssc)

  MAHOUT-1502: Update Naive Bayes Webpage to Current Implementation (Andrew Palumbo via ssc)

  MAHOUT-1517: Remove casts to int in ALSWRFactorizer (ssc)
  
  MAHOUT-1425: SGD classifier example with bank marketing dataset. (frankscholten)

  MAHOUT-1511: Renaming core to mrlegacy (frankscholten)

  MAHOUT-1497: mahout resplit not producing splited files (ssc)

  MAHOUT-1513: Deprecate Canopy Clustering (ssc)

  MAHOUT-1440: Add option to set the RNG seed for inital cluster generation in Kmeans/fKmeans (Andrew Palumbo via ssc)

  MAHOUT-1445: Create an intro for item based recommender (Nick Martin via ssc)

  MAHOUT-1509: Invalid URL in link from "quick start/basics" page (Nick Martin, smarthi)

  MAHOUT-1508: Performance problems with sparse matrices (ssc)

  MAHOUT-1504: Enable/fix thetaSummer job in TrainNaiveBayesJob (Andrew Palumbo, smarthi)

  MAHOUT-1503: TestNaiveBayesDriver fails in sequential mode (Andrew Palumbo, smarthi)

  MAHOUT-1501: ClusterOutputPostProcessorDriver has private default constructor (ssc)

  MAHOUT-1491: Spectral KMeans Clustering doesn't clean its /tmp dir and fails when seeing it again (smarthi)

  MAHOUT-1488: DisplaySpectralKMeans fails: examples/output/clusteredPoints/part-m-00000 does not exist (Saleem Ansari via smarthi)

  MAHOUT-1483: Organize links in web site navigation bar (akm)

  MAHOUT-1482: Rework quickstart website (Jian Wang via ssc)

  MAHOUT-1476: Cleanup website on Hidden Markov Models (akm)

  MAHOUT-1475: Cleanup website on Naive Bayes (smarthi)

  MAHOUT-1472: Cleanup website on fuzzy kmeans (smarthi)
