@@ -22,6 +22,7 @@ import java.util.zip.GZIPOutputStream;
 
 import com.google.common.io.Closeables;
 
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.FileSystem;
@@ -161,23 +162,39 @@ public final class SequenceFilesFromMailArchivesTest extends MahoutTestCase {
 
     File parentFileSubSubDir = new File(new File(new File(new File("TEST"), "subdir"), "subsubdir"), "mail-messages-2.gz");
 
-    Assert.assertEquals(new File(parentFileSubSubDir, testVars[0][0]).toString(), record.getFirst().toString());
+    String expected = record.getFirst().toString();
+    if (SystemUtils.IS_OS_WINDOWS) {
+      expected = expected.replace("/", "\\");
+    }
+    Assert.assertEquals(new File(parentFileSubSubDir, testVars[0][0]).toString(), expected);
     Assert.assertEquals(testVars[0][1] + testVars[0][2], record.getSecond().toString());
     Assert.assertTrue("Second key/value pair not found!", iterator.hasNext());
 
     record = iterator.next();
-    Assert.assertEquals(new File(parentFileSubSubDir, testVars[1][0]).toString(), record.getFirst().toString());
+    expected = record.getFirst().toString();
+    if (SystemUtils.IS_OS_WINDOWS) {
+      expected = expected.replace("/", "\\");
+    }
+    Assert.assertEquals(new File(parentFileSubSubDir, testVars[1][0]).toString(), expected);
     Assert.assertEquals(testVars[1][1] + testVars[1][2], record.getSecond().toString());
 
     // test other file
     File parentFile = new File(new File(new File("TEST"), "subdir"), "mail-messages.gz");
     record = iterator.next();
-    Assert.assertEquals(new File(parentFile, testVars[0][0]).toString(), record.getFirst().toString());
+    expected = record.getFirst().toString();
+    if (SystemUtils.IS_OS_WINDOWS) {
+      expected = expected.replace("/", "\\");
+    }
+    Assert.assertEquals(new File(parentFile, testVars[0][0]).toString(), expected);
     Assert.assertEquals(testVars[0][1] + testVars[0][2], record.getSecond().toString());
     Assert.assertTrue("Second key/value pair not found!", iterator.hasNext());
 
     record = iterator.next();
-    Assert.assertEquals(new File(parentFile, testVars[1][0]).toString(), record.getFirst().toString());
+    expected = record.getFirst().toString();
+    if (SystemUtils.IS_OS_WINDOWS) {
+      expected = expected.replace("/", "\\");
+    }
+    Assert.assertEquals(new File(parentFile, testVars[1][0]).toString(), expected);
     Assert.assertEquals(testVars[1][1] + testVars[1][2], record.getSecond().toString());
     Assert.assertFalse("Only four key/value pairs expected!", iterator.hasNext());
   }
