@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1310: Mahout support windows (Sergey Svinarchuk via ssc)
+
   MAHOUT-1520: Fix links in Mahout website documentation (Saleem Ansari via smarthi)
 
   MAHOUT-1523: Remove @author tags in sparkbindings (ssc)
